Added new feature

--- a/index.html
+++ b/index.html
@@ -5,15 +5,27 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy Birthday, My Love!</title>
     <link rel="stylesheet" href="styles.css">
+    <!-- Font Awesome CDN -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
 </head>
 <body>
-    <div class="container">
-        <h1>Happy Birthday, Adhipa !</h1>
-        <p>I hope this message finds you in great spirits. I wanted to take a moment to let you know just how much I love you. Even though we're far apart, my thoughts and heart are always with you.</p>
-        <p>You are an incredible person, and I have no doubt that you will be successful in your career and accomplish all your goals. Your ambition and determination inspire me every day. I am so proud of you for planning to pursue your PhD in Japan. I know you will excel in this new chapter of your life, and I can't wait to see all the amazing things you will achieve.</p>
-        <p>Have a wonderful birthday, filled with joy, love, and all the happiness you deserve.</p>
-        <p>With all my love,</p>
-        <p>[Your Name]</p>
+    <div class="background-image">
+        <div class="container">
+            <h1>Happy Birthday, [Her Name]!</h1>
+            <p>I hope this message finds you in great spirits. I wanted to take a moment to let you know just how much I love you. Even though we're far apart, my thoughts and heart are always with you.</p>
+            <p>You are an incredible person, and I have no doubt that you will be successful in your career and accomplish all your goals. Your ambition and determination inspire me every day. I am so proud of you for planning to pursue your PhD in Japan. I know you will excel in this new chapter of your life, and I can't wait to see all the amazing things you will achieve.</p>
+            <p>Have a wonderful birthday, filled with joy, love, and all the happiness you deserve.</p>
+            <p>With all my love,</p>
+            <p>[Your Name]</p>
+            <div class="bouncing-logos">
+                <i class="fas fa-birthday-cake"></i>
+                <i class="fas fa-birthday-cake"></i>
+                <i class="fas fa-birthday-cake"></i>
+                <i class="fas fa-birthday-cake"></i>
+            </div>
+        </div>
     </div>
+
+    <script src="script.js"></script>
 </body>
 </html>
