--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <p>With all my love,</p>
             <p>Rushikesh 😘😘😘</p>
             </div>
-            <button onclick="goToBackgroundImagesPage()"> some of our lovely moment</button>
+            <button onclick="goToBackgroundImagesPage()"> some of our lovely moment (Mobile pe horizontal krke dekhna)</button>
 
             <div class="bouncing-logos">
                 <i class="fas fa-birthday-cake"></i>
